syntax = "proto3";

package ecommerce;

message User {
  string id = 1;
  string name = 2;
  string email = 3;
  string address = 4;
}

service UserService {
  rpc GetUser(GetUserRequest) returns (UserResponse);
  rpc CreateUser(CreateUserRequest) returns (UserResponse);
}

message GetUserRequest {
  string user_id = 1;
}

message CreateUserRequest {
  string name = 1;
  string email = 2;
  string address = 3;
}

message UserResponse {
  User user = 1;
}
